@@ -1,6 +1,8 @@
 Klatch 0.2  2012-xx-xx
 
-    * 
+    *
+
+    * Added skeleton manpage.
 
 Klatch 0.1  2012-05-22
 
